# Restormer

./: main.py  pyproject.toml
.kiro/specs/restormer-image-restoration/: .config.kiro  design.md  requirements.md  tasks.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: antigravity.yaml  codex.yaml  cursor.yaml  gemini.yaml  kiro.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
basicsr/: version.py
docs/specs/: cli-contract.md  image-restoration-design.md  image-restoration-requirements.md  index.md  project.md
tests/: test_demo.py
