[project]
name = "restormer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "addict>=2.4.0",
    "einops>=0.8.1",
    "future>=1.0.0",
    "gdown>=5.2.1",
    "h5py>=3.11.0",
    "joblib>=1.4.2",
    "lmdb>=2.1.1",
    "lpips>=0.1.4",
    "matplotlib>=3.7.5",
    "natsort>=8.4.0",
    "numpy>=1.24.4",
    "opencv-python>=4.13.0.92",
    "pyyaml>=6.0.3",
    "requests>=2.32.4",
    "scikit-image>=0.21.0",
    "scikit-learn>=1.3.2",
    "scipy>=1.10.1",
    "tb-nightly>=2.14.0a20230808",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.3",
    "yacs>=0.1.8",
    "yapf>=0.43.0",
]
